<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="inacap.cl.appinacap1.ResultadoActivity">

    <TextView
        android:id="@+id/txv_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/txv_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_res"
        android:textSize="19sp" />
    <TextView
        android:id="@+id/txv_patente"
        android:hint="@string/hint_patente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/txv_marca"
        android:hint="@string/hint_resMarca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txv_modelo"
        android:hint="@string/hint_resModelo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/txv_ano"
        android:hint="@string/hint_resAno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/txv_uf"
        android:hint="@string/hint_resUf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:hint="@string/hint_antiguedad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/txv_antiguedad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:hint="@string/hint_asegurable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/txv_valido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:hint="@string/hint_valor_seguro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <ImageView
        android:id="@+id/imv_resultado"
        android:layout_width="300px"
        android:layout_height="300px" />
    <TextView
        android:id="@+id/txv_valor_seguro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
